# langraph

./: .env.template  .gitignore  README.md  pyproject.toml
curso/: 01_intro.md  02_grafo.md
curso/01-fundamentos/: 01_ia_engineer.md  02_prompting.md  chat_con_genai.ipynb
curso/01-fundamentos/src/: asistente_edteam.py  main.py
curso/01-fundamentos/src/helpers/: ai_client.py
curso/01-fundamentos/src/prompts/: few_shot.py  function_calling.py  json_mode.py  new_prompt.py  zero_shot.py
curso/01-fundamentos/src/services/: new_service.py
curso/02-rag/: 01_rag.md  02_similitud_coseno.md  03_db_vector.md
curso/02-rag/src/rag/: chat_with_pdf.py  chromadb_demo.py  embedding.py  pipeline_rag.py
curso/03-laingchain/: 01-laingchain.md  02_langgraph.md  main.py
curso/03-laingchain/src/langchain_section/chain/: base.py  rag.py
curso/03-laingchain/src/langchain_section/config/: setting.py
curso/03-laingchain/src/langchain_section/core/: demo_rag.py  document_loader.py  embeddings.py  llm.py
curso/03-laingchain/src/langchain_section/demos/: demo_langgraph.py  demo_lcel.py  demo_memory.py
curso/03-laingchain/src/langchain_section/graphs/: __init__.py  nodes.py  rag_agent.py  states.py
curso/03-laingchain/src/langchain_section/memory/: __init__.py  base.py  postgresql_memory.py  (+1 more)
curso/04-modelo-local/: main.py
curso/anthropic/: 01_ai_capabilities_and_limitations.md
data/: chat_history.db  pdfs_indexados.txt
data/chromadb/: chroma.sqlite3
data/chromadb_knwoledge/: chroma.sqlite3
data/chromadb_pdfs/: chroma.sqlite3
proyecto/: main.py  pyproject.toml
